# bigen-skincare-dye-hackathon

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
src/skincare/: fashion_agent.py  haircut_agent.py  haircut_agentv1.py  image_handler.py  main.py  skincare_agent.py
